changed title in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://gauthamsk.me/"
 languageCode = "en-US"
-title = "Sai Gautham Kolluru"
+title = "Gautham Kolluru's"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "gauthamkolluru"
 # Enable Google Analytics by entering your tracking code
