--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ theme = "hugo-sustain"
   avatar = "profile.jpg"
   author = "Sai Gautham Kolluru"
   description = "Science, Tech & Python"
+  resume = "Resume.pdf"
 
   # Custom assets can be linked with their paths relative to static/
   custom_css = []
