--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ theme = "hugo-sustain"
   Email         = "gautham.kolluru@gmail.com"
   Twitter       = "gauthamkolluru"
   LinkedIn      = "gauthamkolluru"
-  Stackoverflow = "gauthamkolluru"
+  Stackoverflow = "7315848"
   Medium        = ""
   Telegram      = ""
 
