varibles for stacckoverflow and linkedin changed

--- a/config.toml
+++ b/config.toml
@@ -24,8 +24,8 @@ theme = "hugo-sustain"
   Github        = "gauthamkolluru"
   Email         = "gautham.kolluru@gmail.com"
   Twitter       = "gauthamkolluru"
-  LinkedIn      = "gauthamkolluru"
-  Stackoverflow = "7315848"
+  LinkedIn      = "gautamkolluru"
+  Stackoverflow = "7315848/sai-gautham-kolluru"
   Medium        = ""
   Telegram      = ""
 
