--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ theme = "hugo-sustain"
   Email         = "gautham.kolluru@gmail.com"
   Twitter       = "gauthamkolluru"
   LinkedIn      = "gautamkolluru"
-  Stackoverflow = "users/7315848/sai-gautham-kolluru"
+  Stackoverflow = "users/7315848"
   Medium        = ""
   Telegram      = ""
 
