email with hugo params

--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,7 @@ theme = "hugo-sustain"
   Stackoverflow = "users/7315848"
   Medium        = ""
   Telegram      = ""
+  Mobile        = "+91 - 939 534 5371"
 
 ## Main Menu
 [[menu.main]]
