Srikanth's wedding invitation

--- a/config.toml
+++ b/config.toml
@@ -61,3 +61,8 @@ theme = "hugo-sustain"
   identifier = "contact-me"
   weight = 500
   url = "/contact-me/"
+[[menu.main]]
+  name = "SrikanthWedsSruthi"
+  identifier = "SrikanthWedsSruthi"
+  weight = 600
+  url = "/SrikanthWedsSruthi.pdf"
