Changed the pdf file name

--- a/config.toml
+++ b/config.toml
@@ -65,4 +65,4 @@ theme = "hugo-sustain"
   name = "SrikanthWedsSruthi"
   identifier = "SrikanthWedsSruthi"
   weight = 600
-  url = "/SrikanthWedsSruthi.pdf"
+  url = "/Srikanth-Weds-Sruthi.pdf"
