--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ theme = "hugo-sustain"
   description = "Science, Tech & Python"
 
   # Custom assets can be linked with their paths relative to static/
-  custom_css = ["styles.css"]
+  custom_css = []
   custom_js  = []
 
 [params.social]
